--- a/Detektor_Altek/pom.xml
+++ b/Detektor_Altek/pom.xml
@@ -17,10 +17,13 @@
             <version>5.0.0-beta.18</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-core -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.9</version>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-modelimport</artifactId>
+            <version>1.0.0-M2.1</version>
+            <type>jar</type>
         </dependency>
+
     </dependencies>
 </project>
